2008-11-16  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* configure.in:
	* help/manual/C/gtk-doc-manual.xml:
	  Back to development.
	  
===  Release 1.11 ===

2008-11-16  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* NEWS:
	  Releasing 1.11.

	* tests/Makefile.am:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	* tests/gtkdoctest.sh:
	  Fix make distcheck.

2008-11-06  Stefan Kost  <ensonic@users.sf.net>

	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  No install rules for test.

2008-11-06  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Get rid of german variable name. Generate glossary xml for 
	  annotations. Improve initial master document.

	* tests/annotations/docs/tester-docs.xml:
	  Update example to include anotation glossary.

2008-11-05  Stefan Kost  <ensonic@users.sf.net>

	patch by: Peter Kjellerstedt <pkj@axis.com>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Correct check for existance of gtkdoc-rebase (better fix than the
	  previous one #508897). Fixes #559281.

2008-10-27  Stefan Kost  <ensonic@users.sf.net>

	patch by: Christian Persch <chpe@gnome.org>

	* gtkdoc-scangobj.in:
	  Fix doc build when using GTK_DISABLE_SINGLE_INCLUDES. Fixes #558082.

2008-10-20  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* devhelp2.xsd:
	  More docs and planning.

2008-10-20  Stefan Kost  <ensonic@users.sf.net>

	* tests/annotations/docs/tester-docs.xml:
	* tests/annotations/src/tester.c:
	* tests/gobject/docs/tester-docs.xml:
	  Update annotations. Glossary enhancements.

2008-10-19  Stefan Kost  <ensonic@users.sf.net>

	* devhelp2.xsd:
	  Update and document format.

2008-10-17  Stefan Kost  <ensonic@users.sf.net>

	* devhelp2.xsd:
	* devhelp2.xsl:
	  Add new language attribute and use "c" here.

2008-10-16  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* gtkdoc-mktmpl.in:
	  Small comment cleanup and loud thinking in TODO :)
