@@ -1,3 +1,10 @@
+2008-12-01  Stefan Kost  <ensonic@users.sf.net>
+
+	patch by: Matthias Clasen  <mclasen@redhat.com>
+
+	* gtkdoc-mkdb.in:
+	  Fix index-id generation for child and style properties. Fixes #562064.
+
 2008-11-16  Stefan Kost  <ensonic@users.sf.net>
 
 	* HACKING:
